force-app/main/default/objects/Return_Number_Series__c/Return_Number_Series__c.object-meta.xml
<CustomObject>
    <label>Return Number Series</label>
    <nameField>
        <label>Series Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Return Number Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>