force-app/main/default/objects/Return_Number_Series__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <label>FY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>