force-app/main/default/objects/Return_Number_Series__c/fields/Last_Return_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Return_Number__c</fullName>
    <label>Last Return Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>