force-app/main/default/objects/Return_Number_Series__c/fields/Return_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Return_Number_Prefix__c</fullName>
    <label>Return Number Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>