force-app/main/default/objects/Return_Number_Series__c/fields/Return_Post_Fix__c.field-meta.xml
<CustomField>
    <fullName>Return_Post_Fix__c</fullName>
    <label>Return Post Fix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>