force-app/main/default/objects/Return_Number_Series__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Return Number Series</relationshipLabel>
    <relationshipName>Return_Number_Series</relationshipName>
    <type>Lookup</type>
</CustomField>