force-app/main/default/objects/Return_Number_Series__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Number__c</columns>
    <columns>Route__c</columns>
    <columns>Return_Number_Prefix__c</columns>
    <columns>Last_Return_Number__c</columns>
    <columns>End_Number__c</columns>
    <columns>FY__c</columns>
    <columns>Branch__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>